-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.2
-
Windows7
A top level item QStandardItem in QStandardItemModel doesn't return the invisible root item when it's parent() function is called. It returns NULL.
Example:
QStandardItemModel model;
QStandardItem *item = new QStandardItem("test");
model.appendRow(item);
item->parent(); //NULL, should return the invisible root item
model.invisibleRootItem(); // returns the invisible root item (items parent)
model.invisibleRootItem()->child(0); //is equal to item
For Gerrit Dashboard: QTBUG-18785 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
16910,1 | Now QStandardItem returns it's parent when parent() is called. | 4.8 | qt/qt | Status: ABANDONED | -2 | 0 |