Now QStandardItem returns it's parent when parent() is called.

After this fix, QStandardItem returns it's parent item's pointer
(or 0, if none) when parent() is called. If the item is added as a top
level item into QStandardItemModel, then a pointer to model's invisible
root item is returned.

Task-number: QTBUG-18785